package com.citronix.dto;

public class HarvestDetailDTO {
}
