package com.citronix.dto;

public class SaleDTO {
}
