package com.citronix.entities;

public class Farm {
}
