package com.citronix.entities;

public class Field {
}
