package com.citronix.entities;

public class Harvest {
}
