package com.citronix.entities;

public class Tree {
}
